added loader and integration with backend

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "io.ionic.starter",
-	"appName": "plastic-market-ionic",
+	"appName": "plastic",
 	"webDir": "www",
 	"bundledWebRuntime": false
 }
