--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "a42d4cb6-29d1-4f2c-9e94-f4fc56df65d3"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
