--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.4.1",
+    "@ngneat/input-mask": "^6.1.0",
     "@ngneat/until-destroy": "^9.2.2",
+    "inputmask": "5.0.5",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "swiper": "^8.4.5",
@@ -45,10 +47,11 @@
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
-    "@awesome-cordova-plugins/http": "^6.3.0",
     "@awesome-cordova-plugins/core": "^6.3.0",
+    "@awesome-cordova-plugins/http": "^6.3.0",
     "@capacitor/cli": "4.6.1",
     "@ionic/angular-toolkit": "^6.0.0",
+    "@types/inputmask": "^5.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
