--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,9 @@
 {
   "name": "plastic-market-ionic",
   "integrations": {
-    "capacitor": {}
+    "capacitor": {
+
+    }
   },
   "type": "angular"
 }
